# palbot-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.release.yml  docker-compose.yml
src/: autocomplete.rs  main.rs
