[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
reqwest = { version = "0.11", features = [
    "json",
    "rustls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
anyhow = "1.0.79"
simsearch = "0.2.4"
serde_json = "1.0.113"
log = "0.4.20"
env_logger = "0.11.1"
urlencoding = "2.1.3"
Inflector = "0.11.4"
thiserror = "1.0.58"
poise = "0.6.1"

[[bin]]
name = "palbot"
path = "src/main.rs"
